# Cpp-devel

./: README.md
Freenove_Hexapod_Spider/: .gitignore  CMakeLists.txt  README.md  installpackages.sh
Freenove_Hexapod_Spider/Application/: CMakeLists.txt
Freenove_Hexapod_Spider/Application/src/: spiderapp.cpp
Freenove_Hexapod_Spider/BCM2835/: CMakeLists.txt  bcm2835_fake.c  bcm2835_wrapper.c
Freenove_Hexapod_Spider/RaspiBlocks/: CMakeLists.txt
Freenove_Hexapod_Spider/RaspiBlocks/inc/: ADS7830.h  HTS221.h  LCD_I2C.h  LPS25H.h  MPU6050.h  PCA9685.h  PCF8563.h  PCF8591.h  UltraSound.h  lcd.h
Freenove_Hexapod_Spider/RaspiBlocks/src/: ADS7830.cpp  HTS221.cpp  LCD_I2C.cpp  LPS25H.cpp  MPU6050.cpp  PCA9685.cpp  PCF8563.cpp  PCF8591.cpp  UltraSound.cpp  lcd.cpp
Freenove_Hexapod_Spider/RaspiLib/: CMakeLists.txt
Freenove_Hexapod_Spider/RaspiLib/inc/: BoardInfo.h  ErrorCode.h  I2C.h  IBoard.h  II2c.h  IPin.h  KalmanFilter.h  Pin.h  Quaternion.h  RaspiBoard.h  RaspiLib.h  Utils.h  Vector3D.h  Version.h
Freenove_Hexapod_Spider/RaspiLib/src/: I2C.cpp  I2C_bcm2835.cpp  I2C_smbus.cpp  KalmanFilter.cpp  Pin.cpp  Quaternion.cpp  RaspiBoard.cpp  RaspiLib.cpp  Utils.cpp  Vector3D.cpp
Freenove_Hexapod_Spider/Spider/: CMakeLists.txt  Spider.md
Freenove_Hexapod_Spider/Spider/inc/: Leg.h  Spider.h  SpiderServos.h  world.h
Freenove_Hexapod_Spider/SpiderCtrl/: CMakeLists.txt
Freenove_Hexapod_Spider/SpiderCtrl/include/: SpiderCtrl.hpp
Freenove_Hexapod_Spider/SpiderCtrl/src/: SpiderCtrl.cpp
Freenove_Hexapod_Spider/doc/: Project_Description.md  Project_Presentation.adoc  Project_Presentation.html
Freenove_Hexapod_Spider/smbus/: CMakeLists.txt
pascals-triangle/: CMakeLists.txt  README.md
pascals-triangle/include/: pascal.hpp
pascals-triangle/src/: pascal.cpp  pascal_demo.cpp
pascals-triangle/test/: pascal.test.cpp
seat-assignment/: .gitignore  CMakeLists.txt  README.md
seat-assignment/data/: seatlist.csv  student_list.csv
seat-assignment/include/: asa.hpp
seat-assignment/src/: asa.cpp  asa_demo.cpp
seat-assignment/test/: asa.test.cpp
(+5 files in other folders)
